[package]
name = "gfx-gtk"
version = "0.1.0"
authors = ["Nicola Orru <nigu.orru@gmail.com>"]
edition = "2018"

[[bin]]
name="gfx-gtk"
path="src/main.rs"

[dependencies]
libc = "0.2"
epoxy = "0.0.4"
shared_library = "*"
gtk = { version = "0.5", features=["v3_16"] }
gdk = { version = "0.9", features=["v3_16"] }
gl = "0.10"
gfx = "0.17"
gfx_device_gl = "0.15"

# gfx_window_glutin = { version = "*", path="../gfx_window_glutin" }