[package]
name = "gfx-gtk"
version = "0.3.0"
authors = ["Nicola Orru <nigu.orru@gmail.com>"]
keywords = ["gfx", "gtk", "glarea", "epoxy", "opengl"]
#edition = "2018"
description = "Integration helper for embedding GFX rendering in a gtk::GlArea"
repository = "https://github.com/itadinanta/gfx-gtk"
license = "Apache-2.0"
# publish = false # insurance against accidents

[lib]
name="gfx_gtk"
crate-type = ["lib"]
path="src/lib.rs"

[dependencies]
libc = "0.2"
epoxy = "0.1.0"
shared_library = "0.1"
gtk = { version = "0.5", features=["v3_16"] }
gdk = { version = "0.9", features=["v3_16"] }
gl = "0.10"
gfx = { git="https://github.com/gfx-rs/gfx.git", rev="56be7773b6c62a5e243a6481a632374370ee33fe" }
gfx_device_gl = { git="https://github.com/gfx-rs/gfx.git", rev="56be7773b6c62a5e243a6481a632374370ee33fe" }

[dev-dependencies]
cgmath = "0.16"
